# stash

./: .dockerignore  .env.example  .gitignore  .mcp.json  .stash  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  DESIGN.md  LICENSE  MANAGED.md  README.md  SECURITY.md  TESTING.md  USE_CASES.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  install.sh  package-lock.json  pyproject.toml  pytest.ini  render.yaml  start.sh  twitter-header.html  twitter-pfp.html  懒猫微服移植计划.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bump-plugin-version.yml  dependency-audit.yml  docker-publish.yml  eval-nightly.yml  publish.yml  test.yml
agent1/: .mcp.json
agent2/: .mcp.json
ai_collab/: __init__.py  capture.py  cli.py  config.py  db.py  git_utils.py  mcp_server.py
backend/: Dockerfile  auth.py  celery_app.py  config.py  database.py  main.py  middleware.py  models.py  requirements-dev.txt  requirements.txt
backend/exports/: html_canvas.py  pdf.py  playwright_network.py  pptx.py
backend/integrations/: __init__.py  base.py  router.py  storage.py
backend/managed/: alembic.ini
backend/migrations/: env.py
backend/routers/: admin.py  agent_chat.py  agent_credentials.py  agent_docs.py  agents.py  aggregate.py  ai_api.py  ai_collab.py  batch.py  bundles.py  canvases.py  cartridges.py  chats.py  clips.py  collab.py  data_access.py  (+56 more)
bridge/: Dockerfile  config.py  relay.py  requirements.txt
chrome_extension/: README.md  esbuild.config.js  manifest.json  package-lock.json  package.json  popup.html  tsconfig.json
claude-plugin/: .orphaned_at  CLAUDE.md  README.md
cli/: app_vfs.py  bookmark_parser.py  client.py  config.py  formatting.py  import_history.py  main.py  mcp_server.py  mount.py  scraper.py
collab/: package-lock.json  package.json
conduit/: conduit.toml
docs/: architecture.html  clean-mac-self-hosting-runbook.md  design-system.md  managed-overlay.md  resource-access-and-sharing.md  security-dashboard.html  security-readiness.md
evals/: README.md  __main__.py  config.py  conftest.py  db.py  harness.py
evals/stash/: .gitignore  PLAN.md  README.md  pyproject.toml
evals/stash/configs/: models.yaml  stash.yaml
evals/stash/harness/: extract_session.py  judge.py  metrics.py  report.py  runner.py  seed_workspace.py
evals/stash/tasks/t1_browser_auth/: rubric.md  seed_events.json  session_a.jsonl  starting_prompt.md  task.yaml
frontend/: Dockerfile  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
lazycat/: lzc-build.dev.yml  lzc-build.yml  lzc-manifest.yml  package.yml
managed/: README.md
mcp_server/: server.py
mockups/: agent.html  discover.html  file.html  generative-ui-lead-sequencer.html  indexing.html  shell.css  shell.js  skills.html  stash-home-redesign.html
openclaw-plugin/: openclaw.plugin.json  package-lock.json  package.json
plans/: full-transcript-upload.md  installer-one-liner.md  multi-agent-install.md  repo-level-stash.md  sharing-demo.md  stash-vfs-spike.md  tables-roadmap.md
powerpoint-mcp/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
powerpoint-mcp/src/: __init__.py  builder.py  models.py  rest_app.py  session_manager.py  utils.py
scripts/: dev-install.sh  discover_skill_repos.txt  import_github_skills.py  lazycat-publish-images.sh  seed_demo_data.py  seed_dev_data.py  seed_stash_redesign.py
sdk/: pyproject.toml
sdk/src/stash_sdk/: __init__.py  client.py
stashai/: __init__.py  skill_validation.py
stashvfs/: __init__.py  client.py  model.py  shell.py
www/: .gitignore  DESIGN.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json
(+1362 files in other folders)
