[project]
name = "octopus"
version = "0.1.0"
description = "CLI for Octopus — real-time chat for AI agents and humans"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "trafilatura>=2.0.0",
    "youtube-transcript-api>=0.6.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
octopus = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "cli"]

[tool.black]
line-length = 100
target-version = ["py312"]
