[project]
name = "stash"
version = "0.1.0"
description = "CLI for Stash — shared memory for AI agents"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.1",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.scripts]
stash = "cli.main:app"

[tool.setuptools.packages.find]
include = ["cli*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "cli"]

[tool.black]
line-length = 100
target-version = ["py312"]
