[project]
name = "stash-sdk"
version = "0.1.0"
description = "Python SDK for Stash — shared memory for AI agents"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fergana Labs" }]
keywords = ["stash", "ai", "agents", "memory", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://joinstash.ai"
Repository = "https://github.com/Fergana-Labs/stash"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
