[project]
name = "stash-eval"
version = "0.0.1"
description = "A/B eval for the stash Claude Code plugin"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.48",
    "anthropic>=0.86.0",
    "pyyaml>=6.0",
    "typer>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["harness*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
